Agregando cambios a controllers y routes
