# storage/api-docs/api-docs.json
@@ -89,7 +89,7 @@
                 "tags": [
                     "Starship"
                 ],
-                "summary": "register starship, only place 6 fields but 18 can be registered, this is just an example",
+                "summary": "register starship",
                 "operationId": "storeStarship",
                 "requestBody": {
                     "content": {
@@ -113,6 +113,42 @@
                                     },
                                     "max_atmosphering_speed": {
                                         "type": "string"
+                                    },
+                                    "crew": {
+                                        "type": "string"
+                                    },
+                                    "passengers": {
+                                        "type": "string"
+                                    },
+                                    "cargo_capacity": {
+                                        "type": "string"
+                                    },
+                                    "consumables": {
+                                        "type": "string"
+                                    },
+                                    "hyperdrive_rating": {
+                                        "type": "string"
+                                    },
+                                    "mglt": {
+                                        "type": "string"
+                                    },
+                                    "starship_class": {
+                                        "type": "string"
+                                    },
+                                    "pilots": {
+                                        "type": "string"
+                                    },
+                                    "films": {
+                                        "type": "string"
+                                    },
+                                    "url": {
+                                        "type": "string"
+                                    },
+                                    "created": {
+                                        "type": "string"
+                                    },
+                                    "edited": {
+                                        "type": "string"
                                     }
                                 },
                                 "type": "object",
@@ -122,7 +158,19 @@
                                     "manufacturer": "Rendili StarDrive",
                                     "cost_in_credits": "125000000",
                                     "length": "1088",
-                                    "max_atmosphering_speed": 1050
+                                    "max_atmosphering_speed": 1050,
+                                    "crew": "1",
+                                    "passengers": "200",
+                                    "cargo_capacity": "1000",
+                                    "consumables": "2 days",
+                                    "hyperdrive_rating": "3.0",
+                                    "mglt": "10",
+                                    "starship_class": "1000000",
+                                    "pilots": "[]",
+                                    "films": "[]",
+                                    "url": null,
+                                    "created": "2023-12-04 21:30:21",
+                                    "edited": "2023-12-04 21:30:21"
                                 }
                             }
                         }
@@ -162,7 +210,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "returns a vehicle query"
+                        "description": "returns a starship query"
                     },
                     "422": {
                         "description": "validation error"
@@ -281,7 +329,7 @@
                     "Users"
                 ],
                 "summary": "Query all users",
-                "operationId": "index",
+                "operationId": "indexUser",
                 "responses": {
                     "200": {
                         "description": "returns the registered users"
@@ -304,7 +352,7 @@
                     "Users"
                 ],
                 "summary": "register users",
-                "operationId": "store",
+                "operationId": "storeUser",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -361,7 +409,7 @@
                     "Users"
                 ],
                 "summary": "Return a query",
-                "operationId": "show",
+                "operationId": "showUser",
                 "parameters": [
                     {
                         "name": "id",
@@ -391,7 +439,7 @@
                     "Users"
                 ],
                 "summary": "Update a data",
-                "operationId": "update",
+                "operationId": "updateUser",
                 "parameters": [
                     {
                         "name": "id",
@@ -453,7 +501,7 @@
                     "Users"
                 ],
                 "summary": "Delete to data",
-                "operationId": "destroy",
+                "operationId": "destroyUser",
                 "parameters": [
                     {
                         "name": "id",
@@ -507,7 +555,7 @@
                 "tags": [
                     "Vehicles"
                 ],
-                "summary": "register vehicle, only place 6 fields but 16 can be registered, this is just an example",
+                "summary": "register vehicle",
                 "operationId": "storeVehicle",
                 "requestBody": {
                     "content": {
@@ -532,6 +580,36 @@
                                     "max_atmosphering_speed": {
                                         "type": "string"
                                     },
+                                    "crew": {
+                                        "type": "string"
+                                    },
+                                    "passengers": {
+                                        "type": "string"
+                                    },
+                                    "cargo_capacity": {
+                                        "type": "string"
+                                    },
+                                    "consumables": {
+                                        "type": "string"
+                                    },
+                                    "vehicle_class": {
+                                        "type": "string"
+                                    },
+                                    "pilots": {
+                                        "type": "string"
+                                    },
+                                    "films": {
+                                        "type": "string"
+                                    },
+                                    "url": {
+                                        "type": "string"
+                                    },
+                                    "created": {
+                                        "type": "string"
+                                    },
+                                    "edited": {
+                                        "type": "string"
+                                    },
                                     "starship_id": {
                                         "type": "integer"
                                     }
@@ -544,6 +622,16 @@
                                     "cost_in_credits": "75000",
                                     "length": "7",
                                     "max_atmosphering_speed": 1500,
+                                    "crew": "1",
+                                    "passengers": "100",
+                                    "cargo_capacity": "1000",
+                                    "consumables": "5 days",
+                                    "vehicle_class": "1.0",
+                                    "pilots": "[]",
+                                    "films": "[]",
+                                    "url": null,
+                                    "created": "2023-12-04 21:30:21",
+                                    "edited": "2023-12-04 21:30:21",
                                     "starship_id": 5
                                 }
                             }
